Fix arrow graphic positions after channel-header rework
The header rework shifted all in-flow channel content left by 36px, but the
two absolutely-positioned arrow graphics (relative to .channel) did not follow,
leaving arrow-small overlapping the FLIP button and arrow-clock misaligned over
the clock wheel.

Shift both left 36px to restore their original relationship to neighbors:
- .arrow-small (horizontal/stacked): left 568 -> 532
- .arrow-clock (clock view): left 192 -> 156

--- a/src/components/Channel.scss
+++ b/src/components/Channel.scss
@@ -168,7 +168,7 @@
     @extend .no-select;
     width: 18px;
     position: absolute;
-    left: 568px;
+    left: 532px;
     top: 64px;
   }
   .flip-opposite {
@@ -265,7 +265,7 @@
     @extend .no-select;
     position: absolute;
     top: 156px;
-    left: 192px;
+    left: 156px;
     width: 113px;
   }
   .key-view-type {
